--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,350 @@
-div {
-  display: flex;
+//general formating
+
+* {
+  padding: 0;
+  margin:0;
+  box-sizing: border-box;
 }
 
-section {
+$height:100vh;
+$width:100vw;
+$common-background:linear-gradient(rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.1));
+$common-border:1px solid white;
+
+@mixin displayFlex{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+//styling seats component
+//styling background
+.background {
+  background: url('../images/bacground2.jpg') rgba(255, 255, 255, 0.7) no-repeat;
+  background-size: cover;
+  height: $height;
+  width: $width;
+  padding: 20px;
+}
+
+.container{
+  display:grid;
+  grid-template-columns:1fr 2fr 1fr;
+  grid-gap:1%;
+}
+
+//styling component with seats
+.cinemaRoom {
+  @include displayFlex();
+  background:$common-background;
+  border:$common-border;
+  height: calc($height - 60px);
+  flex-wrap: wrap;
+  padding-left: 25px;
+}
+
+.grid-container {
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.seatsAllStyles {
+  list-style-type: none;
+  width: 100%;
+}
+
+.circleStyles {
+  color: #696969;
+  width: 300px;
+  height: 300px;
+}
+
+//styling calendar
+
+.calendar{
+  height:calc($height - 60px);
+  display: grid;
+  font-size:1.2rem;
+  background: $common-background;
+}
+
+.dayPicker{
+  grid-rows:2;
+  font-size:1.4rem !important;
+  border:$common-border;
+  height:100%;
+}
+
+//styling choosenDay component
+
+.dateChoosen{
+  @include displayFlex();
+  color:black;
+  height:100%;
+  grid-row:1;
+  border:$common-border;
+  background:url('../images/calendar-day.png') no-repeat 53%;
+  background-position:center;
+  text-align:center;
+
+  h2{
+    font-size: 2.2em;
+    margin-top: 40px;
+
+    span{
+      font-size:0.5em;
+      padding-top:8px;
+    }
+  }
+}
+
+//styling cinema Room
+
+.counterSeats{
+  @include displayFlex();
+  flex-wrap:wrap;
+  align-items:flex-start;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:1.2rem;
+  height:calc($height - 60px);
+  color:white;
+  border:$common-border;
+  background: $common-background;
+  text-align:left;
+}
+
+
+.summary{
+  font-size:1.2em;
+  flex-basis:100%;
+  height:25%;
+  padding:15px;
+  line-height:2.5rem;
+  background-color:rgba(0,0,0,0.3);
+}
+
+.wrapper{
+  @include displayFlex();
+  flex-wrap:wrap;
+  align-items:flex-start;
+  height:75%;
+}
+
+.table{
+  width:100%;
+  padding:15px;
+  font-size:1.8rem;
+  height:50%;
+  display:block;
+  background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.05));
+}
+
+td,tr{
+  width:20%;
+  height:40px;
+  background-repeat:no-repeat;
+  background-size:40% 70%;
+  background-position: center;
+  border:$common-border;
+  text-align:center;
+  font-size:0.8em;
+}
+
+.sum{
+  margin-top:15px;
+  width:50%;
+  float:right;
+  padding-left:30px;
+  background-color:rgba(255,255,255,0.1);
+  font-size:0.8em;
+}
+
+.name{
+  height:70px;
+  flex-basis:100%;
+  font-size:1.2rem;
+
+  &:focus{
+    border: 3px solid #555;
+  }
+}
+
+.buttonSend{
+  flex-basis:50%;
+  height:50px;
+  background-color:blue;
+  color:white;
+  font-size:1em;
+  text-decoration: none;
+  cursor: pointer;
+  text-align:center;
+  display:inline-block;
+  margin-top:20px;
+  border:1px solid blue;
+
+  &:hover{
+    transition-duration: 0.4s;
+    background-color:darkblue;
+    border:1px solid darkblue;
+  }
+}
+
+form{
+  @include displayFlex();
+  width:100%;
+  padding:20px;
+  flex-wrap:wrap;
+}
+
+.paragraf{
+  padding-bottom:15px;
+  padidng-top:15px;
+  font-size:1.5rem;
+  color:white;
+  font-weight:bold;
+  flex-basis:100%;
+}
+
+.paragrafRed{
+  flex-basis:100%;
+  color:red;
+  font-size:1.2rem;
+  font-weight:bold;
+}
+
+.acceptedOrder{
+  color:white;
+  font-size:3rem;
+  text-align:center;
+}
+
+.trash{
+  background-image: url('../images/kosz.png');
+}
+
+//legend
+
+.legendElement{
+  background-repeat:no-repeat;
+  background-size:30px 30px;
+  width:calc(100%/3 - 120px);
+  height:40px;
+  display:inline-block;
+  color:white;
+  font-weight:bold;
+  font-size:1.2em;
+}
+
+.list{
+  width:100%;
+  list-style-type:none;
+  margin:0 auto;
+  text-align:center;
+}
+
+
+@each $name in 'grey', 'red', 'yellow'{
+  .element-#{$name}{
+    background-image:url('../images/#{$name}.png');
+  }
+}
+
+//one seat
+
+.oneSeat {
+  background-repeat: no-repeat;
+  background-size: 2.2em 2.2em;
+  width:2.3em;
+  height:2.3em;
+  display: inline-block;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  outline: none;
+
+  &:hover{
+    background-size: 2.4em 2.4em;
+  }
+}
+
+
+p{
+  text-align:left;
+  width:100%;
+  color:black;
+  font-size:1em;
+  padding-left:1px;
+}
+
+
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 80px;
+  font-size:1em;
+  color: black;
+  font-weight:bold;
+  text-align: center;
+  padding: 2px 0;
+  border-radius: 4px;
+  background:white;
+
+  /* Position the tooltip text */
+  position: absolute;
+  z-index: 1;
+  bottom: 110%;
+  left: 50%;
+  margin-right: -80px;
+
+  /* Fade in tooltip */
+  opacity: 0;
+  transition: opacity 0.4s;
+}
+
+/* Tooltip arrow */
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 20%;
+  margin-right: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: white transparent transparent transparent;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+//Open Component
+
+.openComponent {
+  height: calc($height - 50px);
+  display:grid;
+  font-size:4em;
+}
+
+.header{
+  font-weight:bold;
+  color:white;
+  padding-top: 70px;
+}
+
+.image{
+  width:100%;
+  height: calc($height - 50px);
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-blend-mode: lighten;
+  background-image:url('../images/film3.jpeg');
 }
