--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,672 +1,10 @@
-$height: 100vh;
-$width: 100vw;
-$common-background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
-$common-border: 1px solid white;
-$tablet: "(min-width:768px)";
-$smallDesktop:"(min-width:1024px)";
-$mediumDesktop: "(min-width:1300px)";
-$desktop:"(min-width:1500px)";
-$white:white;
-$black:black;
-$overflow:hidden;
-
-//general formating
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-@mixin displayFlex {
-  display: flex;
-  justify-content: center;
-}
-
-@mixin styleContainer{
-  display: inline-block;
-  position: relative;
-  width:100%;
-}
-
-//styling seats component
-//styling background
-.background {
-  background: url('../images/bacground2.jpg') rgba(255, 255, 255, 0.7) no-repeat;
-  background-size: cover;
-  width: $width;
-  padding: 20px;
-}
-
-.container {
-  @include styleContainer();
-  @media #{$smallDesktop}{
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-gap: 1%;
-    overflow: $overflow;
-  }
-}
-
-.container-open-container {
-  @include styleContainer();
-  @media #{$smallDesktop}{
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 1%;
-    overflow: $overflow;
-  }
-
-}
-
-//styling component with seats
-.cinemaRoom {
-  background: $common-background;
-  border: $common-border;
-  height: calc(#{$height} - 60px);
-  width:100%;
-  position:relative;
-  padding:0 15px 0 15px;
-
-  @media #{$tablet}{
-    margin-bottom: 20px;
-    padding-top: 100px;
-    overflow-x: $overflow;
-  }
-  @media #{$smallDesktop}{
-    padding-top: 50px;
-    @include displayFlex();
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
-  @media #{$mediumDesktop}{
-    padding-left: 50px;
-    padding-right:50px;
-    margin-bottom:0;
-  }
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-
-.seatsAllStyles {
-  list-style-type: none;
-  width: 100%;
-}
-
-//loading circle
-.circleStyles {
-  border: 16px solid transparent;
-  border-radius: 50%;
-  border-top: 16px solid $white;
-  border-bottom: 16px solid $white;
-  width: 200px;
-  height: 200px;
-  animation: spin 2s linear infinite;
-  position: absolute;
-  z-index: 3;
-  left: 0;
-  right: 0;
-  margin: auto;
-  bottom: 50%;
-}
-
-//animation for circle
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-//styling calendar
-
-.calendar {
-  height: calc(#{$height} - 60px);
-  display: grid;
-  font-size: 0.9rem;
-  margin-bottom:20px;
-  background: $common-background;
-
-  @media #{$desktop}{
-    font-size: 1.1rem;
-    margin-bottom:0;
-  }
-}
-
-.dayPicker {
-  border: $common-border;
-  height: 100%;
-  color: $white;
-  font-size: 1rem !important;
-  @media #{$tablet}{
-    font-size: 1.2rem !important;
-  }
-  @media #{$smallDesktop}{
-    font-size: 0.9rem !important;
-  }
-  @media #{$mediumDesktop}{
-    font-size: 1.2rem !important;
-  }
-  @media #{$desktop}{
-    font-size: 1.4rem !important;
-  }
-}
-
-.DayPicker-Day {
-  outline: none;
-  &:hover {
-    color: $black;
-  }
-}
-
-.DayPicker-wrapper {
-  outline: none;
-}
-
-.DayPicker-Weekday {
-  color: $white !important;
-  @media #{$smallDesktop}{
-    font-size: 0.6rem !important;
-  }
-  @media #{$mediumDesktop}{
-    font-size: 1.3rem !important;
-  }
-  @media #{$desktop}{
-    font-size: 1.4rem !important;
-  }
-}
-
-//styling choosenDay component
-
-.dateChoosen {
-  @include displayFlex();
-  align-items: center;
-  color: $black;
-  grid-row: 1;
-  border: $common-border;
-  background: url('../images/calendar-day.png') no-repeat 53%;
-  background-position: center;
-  text-align: center;
-
-  h2 {
-    font-size: 2.2em;
-    margin-top: 40px;
-    @media #{$smallDesktop}{
-      font-size: 1.5em;
-    }
-    @media #{$mediumDesktop}{
-      font-size: 2.2em;
-    }
-    span {
-      font-size: 0.5em;
-      padding-top: 8px;
-    }
-  }
-  @media #{$smallDesktop}{
-    background-size:51%;
-  }
-}
-
-//styling cinema Room
-
-.counterSeats {
-  @include displayFlex();
-  flex-wrap: wrap;
-  align-items: flex-start;
-  font-family: Arial, Helvetica, sans-serif;
-  height: calc(#{$height} - 60px);
-  color: $white;
-  border: $common-border;
-  background: $common-background;
-  text-align: left;
-  position: relative;
-}
-
-
-.summary {
-  font-size: 1em;
-  flex-basis: 100%;
-  height: 25%;
-  line-height: 2rem;
-  text-align:center;
-
-  @media #{$tablet}{
-    font-size: 1.2em;
-  }
-  @media #{$smallDesktop}{
-    margin-top:50px;
-    font-size: 1em;
-  }
-  @media #{$mediumDesktop}{
-    font-size: 1.2em;
-  }
-  @media #{$desktop}{
-    font-size: 1.6em;
-    line-height:2em;
-  }
-}
-
-.wrapper {
-  @include displayFlex();
-  flex-wrap: wrap;
-  align-items: flex-start;
-  height: 75%;
-  padding:15px;
-  background-image: url('../images/_ionicons_svg_md-cart.png');
-  background-repeat: no-repeat;
-  background-size: 7%;
-  background-position: top center;
-  @media #{$smallDesktop}{
-    background-size: 10%;
-    padding:2px;
-  }
-  @media #{$mediumDesktop}{
-    background-size: 10%;
-    padding:4px;
-  }
-}
-
-.table {
-  margin-top: 50px;
-  width: 100%;
-  font-size: 1.8rem;
-  height: 40%;
-  display: block;
-  padding:0;
-  overflow: auto;
-}
-
-
-td, tr {
-  width: 18%;
-  height: 40px;
-  background-repeat: no-repeat;
-  background-size: 40% 70%;
-  background-position: center;
-  border: $common-border;
-  text-align: center;
-  font-size: 0.7em;
-  @media #{$tablet}{
-    width: 16%;
-    font-size:0.8em;
-  }
-  @media #{$smallDesktop}{
-    width: 20%;
-    font-size:0.7em;
-    padding:0;
-    height: 30px;
-  }
-  @media #{$desktop}{
-    width: 20%;
-    font-size:0.8em;
-    height: 40px;
-  }
-}
-
-.sum {
-  margin-top: 15px;
-  width: 40%;
-  float: right;
-  padding:2px;
-  padding-left: 18px;
-  background-color: rgba(255, 255, 255, 0.1);
-  font-size: 0.7em;
-  @media #{$tablet}{
-    font-size:0.8em;
-  }
-  @media #{$smallDesktop}{
-    font-size:0.6em;
-    width: 70%
-  }
-  @media #{$desktop}{
-    padding-left:30px;
-    font-size:1em;
-    width: 60%
-  }
-}
-
-.name {
-  height: 40px;
-  width: 100%;
-  font-size: 1rem;
-
-  &:focus {
-    border: 3px solid #555;
-  }
-  @media #{$tablet}{
-    height: 50px;
-    font-size: 1rem;
-  }
-  @media #{$smallDesktop}{
-    height: 40px;
-    font-size: 0.7rem;
-  }
-  @media #{$desktop}{
-    height: 50px;
-    font-size: 1.2rem;
-  }
-
-}
-
-.buttonSend {
-  width: 50%;
-  height: 35px;
-  background-color: blue;
-  color: $white;
-  font-size: 1em;
-  text-decoration: none;
-  cursor: pointer;
-  text-align: center;
-  display: inline-block;
-  margin-top: 10px;
-  border: 1px solid blue;
-
-  &:hover {
-    transition-duration: 0.4s;
-    background-color: darkblue;
-    border: 1px solid darkblue;
-  }
-  @media #{$tablet}{
-    height: 40px;
-  }
-
-  @media #{$desktop}{
-    height: 50px;
-    margin-top: 20px;
-    font-size: 1.5em;
-  }
-}
-
-form {
-  display:inline-block;
-  @media #{$desktop}{
-    @include displayFlex();
-    align-items:center;
-    flex-wrap:wrap;
-    padding:4px;
-  }
-  width: 100%;
-}
-
-.paragraf {
-  font-size: 1rem;
-  color: $white;
-  font-weight: bold;
-  flex-basis: 100%;
-  @media #{$tablet}{
-    font-size:1.5rem;
-  }
-  @media #{$smallDesktop}{
-    font-size:1rem;
-  }
-  @media #{$desktop}{
-    font-size:1.4rem;
-  }
-}
-
-.paragrafRed {
-  flex-basis: 100%;
-  color: red;
-  font-size: 1rem;
-  font-weight: bold;
-  @media #{$tablet}{
-    font-size:1.5rem;
-  }
-  @media #{$smallDesktop}{
-    font-size:1rem;
-  }
-  @media #{$desktop}{
-    font-size:1.4rem;
-  }
-}
-
-.acceptedOrder {
-  color: $white;
-  font-size: 2rem;
-  text-align: center;
-  animation-name: accepted;
-  margin-top: 4em;
-  line-height: 1.5em;
-  background-position: 100% 50%;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  @media #{$tablet}{
-    font-size: 3rem;
-  }
-}
-
-@keyframes accepted {
-  0% {
-    opacity: 0;
-    transform: translateY(100px);
-    @media #{$tablet}{
-      transform: translateY(200px);
-    }
-  }
-  80% {
-    transform: translateY(10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-.trash {
-  background-image: url('../images/kosz.png');
-}
-
-//legend
-
-.legendElement {
-  background-repeat: no-repeat;
-  background-size: 25px 25px;
-  width: calc(100% / 3 - 30px);
-  height: 40px;
-  display: inline-block;
-  color: $white;
-  font-weight: bold;
-  font-size: 0.6em;
-  margin-top:30px;
-
-  @media #{$tablet}{
-    font-size: 1.2em;
-    background-size: 27px 27px;
-  }
-
-  @media #{$smallDesktop}{
-    font-size: 0.9em;
-    width: calc(100% / 3);
-    background-size: 21px 21px;
-  }
-  @media #{$mediumDesktop}{
-    font-size: 1em;
-    background-size: 25px 25px;
-  }
-
-  @media #{$desktop}{
-    font-size: 1.2em;
-    margin-top:0;
-    background-size: 30px 30px;
-    width: calc(100% / 3);
-  }
-
-}
-
-.list {
-  width: 100%;
-  list-style-type: none;
-  margin: 0 auto;
-  text-align: center;
-}
-
-
-@each $name in 'grey', 'red', 'yellow' {
-  .element-#{$name} {
-    background-image: url('../images/#{$name}.png');
-  }
-}
-
-//one seat
-
-.oneSeat {
-  background-repeat: no-repeat;
-  background-size: 1.9em 1.9em;
-  width: 2em;
-  height: 2em;
-  display: block;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  outline: none;
-
-  @media #{$tablet}{
-    background-size: 2em 2em;
-    width: 2.1em;
-    height: 2.1em;
-  }
-
-  @media #{$smallDesktop}{
-    background-size: 1.8em 1.8em;
-    width: 2em;
-    height: 2em;
-  }
-
-  @media #{$desktop}{
-    background-size: 2.2em 2.2em;
-    width: 2.5em;
-    height: 2.5em;
-  }
-
-  &:hover {
-    background-size: 2.4em 2.4em;
-    @media #{$smallDesktop}{
-      background-size: 1.9em 1.9em;
-    }
-  }
-}
-
-p {
-  text-align: left;
-  width: 100%;
-  color: $black;
-  font-size: 1em;
-  padding-left: 1px;
-}
-
-
-/* Tooltip container */
-.tooltip {
-  position: relative;
-  display: inline-block;
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 70px;
-  font-size: 0.8em;
-  color: $black;
-  font-weight: bold;
-  text-align: center;
-  padding: 2px 0;
-  border-radius: 4px;
-  background: $white;
-  @media #{$smallDesktop}{
-    width: 40px;
-    font-size: 0.6em;
-  }
-  @media #{$mediumDesktop}{
-    width: 60px;
-    font-size: 0.8em;
-  }
-  @media #{$desktop}{
-    width: 75px;
-    font-size: 1em;
-  }
-
-
-
-  /* Position the tooltip text */
-  position: absolute;
-  z-index: 1;
-  bottom: 110%;
-  left: 50%;
-  margin-right: -80px;
-
-  /* Fade in tooltip */
-  opacity: 0;
-  transition: opacity 0.4s;
-}
-
-/* Tooltip arrow */
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 20%;
-  margin-right: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: $white transparent transparent transparent;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-//Open Component
-
-.openComponent {
-  height: calc(#{$height} - 50px);
-  display: grid;
-  font-size: 1.5em;
-  @media #{$tablet}{
-    font-size: 3em;
-  }
-  @media #{$desktop}{
-    font-size: 4em;
-  }
-}
-
-.header {
-  font-weight: bold;
-  margin-top: 50px;
-  color: $white;
-  padding:50px 0 0 80px;
-  background-color: rgba(255, 255, 255, 0.15);
-  animation: move 2s ease-out;
-}
-
-@keyframes move {
-  0% {
-    opacity: 0;
-    transform: translateX(100px);
-    @media #{$tablet}{
-      transform: translateX(200px);
-    }
-  }
-  80% {
-    transform: translateX(10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-.image {
-  height: calc(#{$height} - 60px);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-blend-mode: lighten;
-  background-image: url('../images/film3.jpeg');
-}
+@import 'modules/variables';
+@import 'modules/mixins';
+@import 'modules/all';
+@import 'partials/seat';
+@import 'partials/circle';
+@import 'partials/calendar';
+@import 'partials/counterSeats';
+@import 'partials/legend';
+@import 'partials/oneSeat';
+@import 'partials/openComponents';
